Update and rename 实现效果一.html to result.html

--- a/result.html
+++ b/result.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>jquery任务1</title>
+    <title>jquery</title>
     <style media="screen">
       ul,li,div,a,img{
         margin: 0;
