--- a/导航栏.html
+++ b/导航栏.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>renwu1</title>
+    <title>jquery</title>
     <style>
     body,p,a,div{
       margin: 0;
